--- a/css/new-age.css
+++ b/css/new-age.css
@@ -11,8 +11,8 @@ body {
 }
 
 body {
-  font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif';
-  font: 10pt "Shabnam FD";
+  /*font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif';*/
+  font: 12pt "Shabnam FD";
 }
 
 a {
@@ -42,13 +42,13 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
-  font-weight: 200;
+  /*font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';*/
+  /*font-weight: 200;*/
   letter-spacing: 1px;
 }
 
 p {
-  font-size: 18px;
+  /*font-size: 18px;*/
   line-height: 1.5;
   margin-bottom: 20px;
 }
@@ -66,16 +66,16 @@ section h2 {
   background-color: white;
   -webkit-transition: all .35s;
   transition: all .35s;
-  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
-  font-weight: 200;
-  letter-spacing: 1px;
+  /*font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';*/
+  /*font-weight: 200;*/
+  /*letter-spacing: 1px;*/
 }
 
 #mainNav .navbar-brand {
   color: #fdcc52;
-  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
-  font-weight: 200;
-  letter-spacing: 1px;
+  /*font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';*/
+  /*font-weight: 200;*/
+  /*letter-spacing: 1px;*/
 }
 
 #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
@@ -83,15 +83,15 @@ section h2 {
 }
 
 #mainNav .navbar-toggler {
-  font-size: 12px;
+  /*font-size: 12px;*/
   padding: 8px 10px;
   color: #222222;
 }
 
 #mainNav .navbar-nav > li > a {
   font-size: 11px;
-  font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
-  letter-spacing: 2px;
+  /*font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';*/
+  /*letter-spacing: 2px;*/
   text-transform: uppercase;
 }
 
@@ -159,9 +159,9 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background: url("../img/bg-pattern.png"), #7b4397;
-  background: url("../img/bg-pattern.png"), -webkit-gradient(linear, right top, left top, from(#7b4397), to(#dc2430));
-  background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+  /*background: url("../img/bg-pattern.png"), #7b4397;*/
+  background:-webkit-gradient(linear, right top, left top, from(#7b4397), to(#dc2430));
+  background: linear-gradient(to left, #7b4397, #dc2430);
 }
 
 header.masthead .header-content {
@@ -171,7 +171,7 @@ header.masthead .header-content {
 }
 
 header.masthead .header-content h1 {
-  font-size: 30px;
+  font-size: 20px;
 }
 
 header.masthead .device-container {
@@ -196,7 +196,7 @@ header.masthead .device-container .screen img {
     text-align: left;
   }
   header.masthead .header-content h1 {
-    font-size: 50px;
+    font-size: 30px;
   }
   header.masthead .device-container {
     max-width: 325px;
@@ -235,7 +235,7 @@ section.download .badges .badge-link img {
 
 @media (min-width: 768px) {
   section.download h2 {
-    font-size: 70px;
+    font-size: 50px;
   }
 }
 
@@ -310,7 +310,7 @@ section.cta .cta-content h2 {
 
 @media (min-width: 768px) {
   section.cta .cta-content h2 {
-    font-size: 80px;
+    font-size: 30px;
   }
 }
 
@@ -418,22 +418,23 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
   color: white;
   border: 1px solid;
   border-color: white;
+    font-size: 15px;
 }
 
 .btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
-  color: white;
+  color: black;
   border-color: #fdcc52;
   background-color: #fdcc52;
 }
 
 .btn {
   border-radius: 300px;
-  font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
-  letter-spacing: 2px;
+  /*font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';*/
+  /*letter-spacing: 2px;*/
   text-transform: uppercase;
 }
 
 .btn-xl {
-  font-size: 11px;
+  font-size: 15px;
   padding: 15px 45px;
 }
